# rl-ids

./: .dvcignore  .env.example  .gitignore  .gitmodules  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  api_test_results.json  index.html  models.dvc  network_monitor.py  pyproject.toml  requirements.txt  run_api.py  sitemap.xml  vercel.json  website_monitor.py
.dvc/: config
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  docs.yml  release.yml  training.yml
api/: README.md  __init__.py  client.py  config.py  index.html  main.py  models.py  requirements.txt  services.py  utils.py
api/examples/: index.html
changelog/: index.html
css/: base.css
docs/: README.md  mkdocs.yml
faq/: index.html
getting-started/: index.html
license/: index.html
models/: dqn_model_final.pt  dqn_model_final.pt.dvc
modules/: index.html
monitoring/: alerts.yml  grafana_dashboard.json  prometheus.yml
reports/: evaluation_classification_report.csv  evaluation_confusion_matrix.csv  evaluation_episode_details.csv  evaluation_episode_details_enhanced.csv  evaluation_summary.csv  evaluation_summary_enhanced.csv  training_metrics.csv
rl_ids/: __init__.py  balance.py  config.py  dataset.py  environment.py  features.py  make_dataset.py  normalize.py  plots.py
scripts/: download_data.sh  dvc_push.sh  run_mlflow.sh
search/: search_index.json
tests/: test_api.py  test_config.py  test_environment.py  test_extract.py  test_q_network.py
tutorials/: index.html
user-guide/: index.html
(+60 files in other folders)
