[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rl_ids"
version = "0.0.1"
description = "Reinforcement Learning-driven Adaptive Intrusion Detection System"
authors = [
  { name = "Yash Potdar" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["rl_ids"]
include = ["pyproject.toml", "rl_ids/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rl_ids"]
force-sort-within-sections = true

